[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nowdoing-sdk"
version = "0.1.0"
description = "Client SDK for the NowDoing macOS app loopback HTTP API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NowDoing", email = "hello@nowdoing.app" }]
keywords = ["nowdoing", "time-tracking", "macos", "sdk", "client"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = ["httpx==0.28.1"]

[project.urls]
Homepage = "https://github.com/NowDoingApp/sdk/tree/main/python"
Repository = "https://github.com/NowDoingApp/sdk"
Issues = "https://github.com/NowDoingApp/sdk/issues"
Changelog = "https://github.com/NowDoingApp/sdk/blob/main/python/CHANGELOG.md"

[project.optional-dependencies]
test = ["pytest==9.0.3", "pytest-asyncio==1.3.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/nowdoing"]

[tool.hatch.build.targets.sdist]
include = ["src/nowdoing", "README.md", "CHANGELOG.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "live: requires a running NowDoing app instance (token+port via env)",
]
